--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -100,6 +100,7 @@ jobs:
       - name: Build the Java API and Run the Java Tests
         run: |
           set -e -x
+          source genai-macos-venv/bin/activate
           python3 build.py --config=Release --build_dir build/cpu --build_java --parallel --cmake_generator "Ninja"
 
       - name: Run tests
