fixes for reviews

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,13 +110,17 @@ target_include_directories(onnxruntime-genai-static PRIVATE ${onnxruntime_extens
 target_include_directories(onnxruntime-genai-static PUBLIC ${onnxruntime_extensions_SOURCE_DIR}/shared/api/)
 target_link_libraries(onnxruntime-genai PRIVATE onnxruntime_extensions)
 target_link_libraries(onnxruntime-genai-static PUBLIC onnxruntime_extensions)
-target_include_directories(onnxruntime-genai PUBLIC ${llguidance_SOURCE_DIR}/parser/)
-target_include_directories(onnxruntime-genai-static PUBLIC ${llguidance_SOURCE_DIR}/parser/)
-target_link_libraries(onnxruntime-genai PRIVATE llguidance_parser)
-target_link_libraries(onnxruntime-genai-static PUBLIC llguidance_parser)
-if (WIN32)
-  target_link_libraries(onnxruntime-genai PRIVATE bcrypt)
-  target_link_libraries(onnxruntime-genai-static PRIVATE bcrypt)
+
+if(USE_GUIDANCE)
+  target_include_directories(onnxruntime-genai PUBLIC ${llguidance_SOURCE_DIR}/parser/)
+  target_include_directories(onnxruntime-genai-static PUBLIC ${llguidance_SOURCE_DIR}/parser/)
+  target_link_libraries(onnxruntime-genai PRIVATE llguidance_parser)
+  target_link_libraries(onnxruntime-genai-static PUBLIC llguidance_parser)
+  if (WIN32)
+    # bcrypt is needed for the rust std lib
+    target_link_libraries(onnxruntime-genai PRIVATE bcrypt)
+    target_link_libraries(onnxruntime-genai-static PRIVATE bcrypt)
+  endif()
 endif()
 target_link_directories(onnxruntime-genai PRIVATE ${ORT_LIB_DIR})
 
