--- a/.github/workflows/linux-cpu-arm64-build.yml
+++ b/.github/workflows/linux-cpu-arm64-build.yml
@@ -75,8 +75,7 @@ jobs:
           docker run --rm \
           --volume $GITHUB_WORKSPACE:/onnxruntime_src \
           -w /onnxruntime_src ort_genai_linux_arm64_gha bash -c " \
-            /usr/bin/cmake --preset linux_gcc_cpu_release \
-              -DRust_COMPILER=/onnxruntime_src/.cargo/bin/rustc "
+            /usr/bin/cmake --preset linux_gcc_cpu_release "
 
       - name: Docker -- Build with CMake and GCC
         run: |
