--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -85,9 +85,9 @@ jobs:
       - name: Install Rust Toolchain
         uses: dtolnay/rust-toolchain@1.82.0
 
-      - name: Install Rust Toolchain
+      - name: Install Rust Android Toolchain
         run: |
-          rustup target add --toolchain stable-x86_64-unknown-linux-gnu x86_64-linux-android
+          rustup target add --toolchain 1.82.0-x86_64-unknown-linux-gnu x86_64-linux-android
 
       - name: Create Android build
         run: |
