--- a/.pipelines/stages/jobs/steps/capi-appleframework-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-appleframework-step.yml
@@ -24,7 +24,7 @@ steps:
     python3 tools/ci_build/github/apple/build_apple_framework.py \
           --build_dir "$(Build.BinariesDirectory)/apple_framework" \
           --config $(cmake_build_type) \
-          ${{ parameters.build_settings_file }}
+          "${{ parameters.build_settings_file }}"
 
     mkdir $(Build.BinariesDirectory)/artifacts
     mkdir -p $(Build.BinariesDirectory)/artifacts_staging/onnxruntime-genai.xcframework
