--- a/.github/workflows/doxygen-build.yml
+++ b/.github/workflows/doxygen-build.yml
@@ -3,17 +3,36 @@ on:
   workflow_dispatch:
   push:
     branches:
-    - main
-    - rel-*
+      - main
+      - rel-*
+    paths:
+      - src/**
   pull_request:
 jobs:
-  doxygen_build:
-    runs-on: [ "self-hosted", "1ES.Pool=onnxruntime-genai-Ubuntu2204-AMD-CPU" ]
+  build:
+    name: Generate C/C++ API docs
+    runs-on: ["self-hosted", "1ES.Pool=onnxruntime-github-Ubuntu2204-AMD-CPU"]
     steps:
-    - uses: mattnotmitt/doxygen-action
-      with:
-        doxyfile-path: 'src/csharp/Doxyfile_csharp.cfg'
+      - uses: actions/checkout@v4
+      - name: Install doxygen and dependencies
+        run: |
+          sudo apt update
+          sudo apt-get install libclang-dev
+          sudo apt-get install libclang-cpp14
+          wget https://www.doxygen.nl/files/doxygen-1.9.8.linux.bin.tar.gz
+          tar xvzf doxygen-1.9.8.linux.bin.tar.gz
 
-    - uses: mattnotmitt/doxygen-action
-      with:
-        doxyfile-path: 'src/java/Doxyfile_java.cfg'
+      - name: Run C/C++ doxygen
+        run: |
+          doxygen-1.9.8/bin/doxygen src/Doxyfile
+
+      - name: Run CSharp doxygen
+        run: |
+          doxygen-1.9.8/bin/doxygen src/csharp/Doxyfile_csharp.cfg
+
+      - name: Run Java doxygen
+        run: |
+          doxygen-1.9.8/bin/doxygen src/java/Doxyfile_java.cfg
+
+      - name: Log source commit
+        run: git rev-parse --short HEAD > build/doxygen/html/source-version.txt
