[skip ci] update

--- a/src/java/Doxyfile_java.cfg
+++ b/src/java/Doxyfile_java.cfg
@@ -69,7 +69,7 @@ PROJECT_LOGO           =
 # entered, it will be relative to the location where doxygen was started. If
 # left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = csharp_dox
+OUTPUT_DIRECTORY       = java_dox
 
 # If the CREATE_SUBDIRS tag is set to YES then doxygen will create up to 4096
 # sub-directories (in 2 levels) under the output directory of each output format
