--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -55,16 +55,16 @@ jobs:
     - name: Configure CMake
       run: |
         python -m pip install wheel
-        cmake --preset windows_arm64_cpu_release
+        cmake --preset windows_arm64_cpu_debug
 
     - name: Build with CMake
       run: |
-        cmake --build --preset windows_arm64_cpu_release --parallel
+        cmake --build --preset windows_arm64_cpu_debug --parallel
 
     - name: Build the C# API and Run the C# Tests
       run: |
         cd test\csharp
-        dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
+        dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Debug" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
 
     - name: Install the Python Wheel and Test Dependencies
       run: |
@@ -85,5 +85,5 @@ jobs:
 
     - name: Run tests
       run: |
-        copy $env:GITHUB_WORKSPACE\ort\lib\* .\$env:binaryDir\Release
-        & .\$env:binaryDir\Release\unit_tests.exe
+        copy $env:GITHUB_WORKSPACE\ort\lib\* .\$env:binaryDir\Debug
+        & .\$env:binaryDir\Debug\unit_tests.exe
