--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -34,18 +34,6 @@ jobs:
       with:
         nuget-version: '5.x'
 
-    - name: Setup Java 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: 'gradle'
-
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v3
-      with:
-        gradle-version: '8.6'
-
     - name: Download OnnxRuntime Nightly
       shell: powershell
       run: |
@@ -67,11 +55,16 @@ jobs:
     - name: Configure CMake
       run: |
         python -m pip install wheel
-        cmake --preset windows_arm64_cpu_debug
+        cmake --preset windows_arm64_cpu_release
 
     - name: Build with CMake
       run: |
-        cmake --build --preset windows_arm64_cpu_debug --parallel
+        cmake --build --preset windows_arm64_cpu_release --parallel
+
+    - name: Build the C# API and Run the C# Tests
+      run: |
+        cd test\csharp
+        dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
 
     - name: Install the Python Wheel and Test Dependencies
       run: |
@@ -83,15 +76,6 @@ jobs:
       run: |
         python test/python/test_onnxruntime_genai.py --cwd "test\python" --test_models "test\test_models"
 
-    - name: Build the C# API and Run the C# Tests
-      run: |
-        cd test\csharp
-        dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
-
-    - name: Build the Java API and Run the Java Tests
-      run: |
-        python build.py --config=Release --build_dir $env:binaryDir --build_java --parallel
-
     - name: Verify Build Artifacts
       if: always()
       continue-on-error: true
@@ -101,5 +85,5 @@ jobs:
 
     - name: Run tests
       run: |
-        copy $env:GITHUB_WORKSPACE\ort\lib\* .\$env:binaryDir\Debug
-        & .\$env:binaryDir\Debug\unit_tests.exe
+        copy $env:GITHUB_WORKSPACE\ort\lib\* .\$env:binaryDir\Release
+        & .\$env:binaryDir\Release\unit_tests.exe
