--- a/.github/workflows/linux-cpu-x64-nightly-build.yml
+++ b/.github/workflows/linux-cpu-x64-nightly-build.yml
@@ -22,8 +22,6 @@ jobs:
       - name: Checkout OnnxRuntime GenAI repo
         uses: actions/checkout@v2
 
-
-
       - name: Download OnnxRuntime
         run: |
           curl -L -o ${{ env.ort_zip }} ${{ env.ort_url }} 
@@ -41,19 +39,16 @@ jobs:
         run: |
           git submodule update --init --recursive
           
-      - name: Build with CMake and clang
+      - name: Build with Python
         run: |
-          set -e -x
-          rm -rf build
-          cmake --preset linux_gcc_cpu_release
-          cmake --build --preset linux_gcc_cpu_release
+          python3 build.py --parallel --config=Release
 
       - name: Install the python wheel and test dependencies
         run: |
           python3 -m pip install -r test/python/requirements.txt --user
           python3 -m pip install -r test/python/cpu/torch/requirements.txt --user
           python3 -m pip install -r test/python/cpu/ort/requirements.txt --user
-          python3 -m pip install build/cpu/wheel/onnxruntime_genai*.whl --no-deps
+          python3 -m pip install build/Linux/Release/wheel/onnxruntime_genai*.whl --no-deps
 
       - name: Use Dummy HuggingFace Token
         run: |
