--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -52,14 +52,9 @@ jobs:
           mv ${{ env.ORT_PACKAGE_NAME }}/build/native/include ort/
           mv ${{ env.ORT_PACKAGE_NAME }}/runtimes/osx-arm64/native/* ort/lib/
 
-      - name: Configure CMake
-        run: |
-          cmake --preset macos_arm64_cpu_release
-
-      - name: Build with CMake
-        run: |
-          cmake --build --preset macos_arm64_cpu_release --parallel
-        continue-on-error: false
+    - name: Build with Python
+      run: |
+        python3 build.py --parallel --config=Release --build_csharp --build_java --cmake_generator "Unix Makefiles"
 
       - name: Install the python wheel and test dependencies
         run: |
@@ -68,7 +63,7 @@ jobs:
           python3 -m pip install -r test/python/requirements.txt
           python3 -m pip install -r test/python/macos/torch/requirements.txt
           python3 -m pip install -r test/python/macos/ort/requirements.txt
-          python3 -m pip install build/cpu/osx-arm64/wheel/onnxruntime_genai*.whl --no-deps
+          python3 -m pip install build/MacOSX/Release/wheel/onnxruntime_genai*.whl --no-deps
 
       - name: Remove the ort lib and header files
         run: |
@@ -78,8 +73,8 @@ jobs:
         if: always()
         continue-on-error: true
         run: |
-          ls -l ${{ github.workspace }}/build/cpu/osx-arm64
-          ls -l ${{ github.workspace }}/build/cpu/osx-arm64/wheel
+          ls -l ${{ github.workspace }}/build/MacOSX/Release
+          ls -l ${{ github.workspace }}/build/MacOSX/Release/wheel
 
       # This will also download all the test models to the test/test_models directory
       # These models are used by the python tests as well as C#, C++ and others.
@@ -95,17 +90,11 @@ jobs:
         run: |
           export ORTGENAI_LOG_ORT_LIB=1
           cd test/csharp
-          dotnet test /p:Configuration=Release /p:NativeBuildOutputDir="../../build/cpu/osx-arm64" --verbosity normal
-
-      - name: Build the Java API and Run the Java Tests
-        run: |
-          set -e -x
-          source genai-macos-venv/bin/activate
-          python3 build.py --config=Release --build_dir build/cpu/osx-arm64 --build_java --parallel --cmake_generator "Unix Makefiles"
+          dotnet test /p:Configuration=Release /p:NativeBuildOutputDir="../../build/MacOSX/Release" --verbosity normal
 
       - name: Run tests
         run: |
           set -e -x
           export ORTGENAI_LOG_ORT_LIB=1
-          export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$GITHUB_WORKSPACE/build/cpu/osx-arm64
-          ./build/cpu/osx-arm64/unit_tests
+          export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$GITHUB_WORKSPACE/build/MacOSX/Release
+          ./build/MacOSX/Release/unit_tests
